--- a/s3-service/src/main/resources/application.properties
+++ b/s3-service/src/main/resources/application.properties
@@ -25,3 +25,10 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-dir=D://report//
+
+
+s3.endpointUrl=https://s3.amazonaws.com
+s3.accessKeyId=AKIA2I6IJU5RKKY2E6EX
+s3.secretKey=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
+s3.bucketName=vikashdemo
+s3.region=us-east-2
